--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -114,7 +114,7 @@ run.classpath=\
     ${build.classes.dir}
 # Space-separated list of JVM arguments used when running the project
 # (you may also define separate properties like run-sys-prop.name=value instead of -Dname=value
-# or test-sys-prop.name=value to set system properties for unit tests):
+# or test-sys-prop.name=value to set system properties for unit test):
 run.jvmargs=
 run.modulepath=\
     ${javac.modulepath}
